// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseBullets> - lifecycling for infinite bullets should update secondaryBullets and bullets when newProp.activeItem is not equal to the current one 1`] = `
<div
  aria-hidden="true"
  className="bullets"
  data-active={1}
  data-infinite={true}
>
  <div
    data-element="infiniteWrapper"
    style={
      Object {
        "transform": "translate(0rem)",
      }
    }
  >
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={true}
      data-tstid="bullet"
      key="0"
    />
    <span
      data-active={true}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="1"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={true}
      data-tstid="bullet"
      key="2"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="3"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="4"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="5"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="6"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="7"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="8"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="9"
    />
  </div>
</div>
`;

exports[`<BaseBullets> - props for default should render correctly the basic 1`] = `
<div
  aria-hidden="true"
  className="bullets"
  data-active={0}
  data-infinite={false}
>
  <span
    data-active={true}
    data-element="bullet"
    data-infinite={false}
    data-secondary={false}
    data-tstid="bullet"
    key="0"
  />
  <span
    data-active={false}
    data-element="bullet"
    data-infinite={false}
    data-secondary={true}
    data-tstid="bullet"
    key="1"
  />
  <span
    data-active={false}
    data-element="bullet"
    data-infinite={false}
    data-secondary={true}
    data-tstid="bullet"
    key="2"
  />
</div>
`;

exports[`<BaseBullets> - props for infinite bullets should render correctly when activeItem is the first one 1`] = `
<div
  aria-hidden="true"
  className="bullets"
  data-active={0}
  data-infinite={true}
>
  <div
    data-element="infiniteWrapper"
    style={
      Object {
        "transform": "translate(0rem)",
      }
    }
  >
    <span
      data-active={true}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="0"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={true}
      data-tstid="bullet"
      key="1"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={true}
      data-tstid="bullet"
      key="2"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="3"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="4"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="5"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="6"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="7"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="8"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="9"
    />
  </div>
</div>
`;

exports[`<BaseBullets> - props for infinite bullets should render correctly when activeItem is the last one 1`] = `
<div
  aria-hidden="true"
  className="bullets"
  data-active={9}
  data-infinite={true}
>
  <div
    data-element="infiniteWrapper"
    style={
      Object {
        "transform": "translate(-9rem)",
      }
    }
  >
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="0"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="1"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="2"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="3"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="4"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="5"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="6"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="7"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={true}
      data-tstid="bullet"
      key="8"
    />
    <span
      data-active={true}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="9"
    />
  </div>
</div>
`;

exports[`<BaseBullets> - props for infinite bullets should render correctly when activeItem is the penultimate one 1`] = `
<div
  aria-hidden="true"
  className="bullets"
  data-active={8}
  data-infinite={true}
>
  <div
    data-element="infiniteWrapper"
    style={
      Object {
        "transform": "translate(-9rem)",
      }
    }
  >
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="0"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="1"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="2"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="3"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="4"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="5"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="6"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={true}
      data-tstid="bullet"
      key="7"
    />
    <span
      data-active={true}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="8"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={true}
      data-tstid="bullet"
      key="9"
    />
  </div>
</div>
`;

exports[`<BaseBullets> - props for infinite bullets should render correctly when activeItem is the second one 1`] = `
<div
  aria-hidden="true"
  className="bullets"
  data-active={1}
  data-infinite={true}
>
  <div
    data-element="infiniteWrapper"
    style={
      Object {
        "transform": "translate(0rem)",
      }
    }
  >
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={true}
      data-tstid="bullet"
      key="0"
    />
    <span
      data-active={true}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="1"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={true}
      data-tstid="bullet"
      key="2"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="3"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="4"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="5"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="6"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="7"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="8"
    />
    <span
      data-active={false}
      data-element="bullet"
      data-infinite={true}
      data-secondary={false}
      data-tstid="bullet"
      key="9"
    />
  </div>
</div>
`;
